# InsightfulPortfolioAI

./: .gitignore  DEPLOYMENT_GUIDE_BACKEND.md  DEPLOYMENT_GUIDE_IOS.md  DEPLOY_NOW.md  Dockerfile  HYBRID_NAV_SYSTEM_COMPLETE.md  IMPLEMENTATION_STATUS.md  INVITE_SYSTEM_STATUS.md  InsightfulPortfolioAI_Technical_Architecture.html  MANUAL_NAV_INTEGRATION_GUIDE.md  PROJECT_BRIEF_PortfolioAI.md  SNAPSHOT_IMPLEMENTATION.md  START_HERE.md  TRANSFER_APARNA_HOLDINGS.sql  TRANSFER_HOLDINGS_GUIDE.md  nixpacks.toml  railway.json
.github/workflows/: refresh_kite_token.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/models/: alert.py  call_request.py  portfolio.py  price_alert.py  snapshot.py  user.py
apps/api/app/routers/: ai_research.py  alerts.py  auth.py  call_requests.py  chat.py  invites.py  market.py  news.py  portfolios.py  price_alerts.py  push.py  reports.py  research.py  snapshots.py  users.py  watchlists.py  websocket.py
apps/api/app/services/: alerts.py  email_service.py  kite_service.py  portfolio_context.py  push_service.py  scheduler.py  supabase_client.py
apps/api/scripts/: backfill_snapshots.py  capture_snapshots.py
apps/mobile/: INSTALL_ON_PHONE.md  app.json  build-for-my-phone.ps1  eas.json  package-lock.json  package.json  setup-deployment.ps1  setup-deployment.sh
scripts/: refresh_kite_token.py
supabase/migrations/: 001_initial_schema.sql  002_manager_linking_and_crud_policies.sql  003_allow_manager_claim_unassigned_clients.sql  (+10 more)
wireframes/: mobile-wireframe.jsx  web-wireframe.jsx
(+89 files in other folders)
